<resources>
    <string name="app_name">TennisBoard</string>
    <string name="txv_optjuepend">Match Continued</string>
    <string name="txv_optjuenuevo">Match New</string>
    <string name="txv_optjugadores">Tennis Players</string>
    <string name="txv_optajustes">Settings</string>
    <string name="txv_optestjuego">Match Records</string>
    <string name="txv_optestjugador">Players Records</string>
    <string name="txv_optayuda">Help</string>
    <string name="txv_optacerca">About</string>
    <string name="cnd_juegopend">Match Paused</string>
    <string name="cnd_optjuenuevo">Match New</string>
    <string name="cnd_optjugadores">Tennis Players</string>
    <string name="cnd_optajustes">Settings</string>
    <string name="cnd_optestjuego">Match Records</string>
    <string name="cnd_optestjugador">Players Records</string>
    <string name="cnd_optayuda">Help</string>
    <string name="cnd_optacerca">About</string>
    <string name="cnd_logo">Application Logo</string>
    <string name="ald_jugadoresTit">Manage tennis players</string>
    <string name="ald_jugadoresMes">indicate if you want to register a new tennis
        player or want to select an existing one\n\n
    You can also modify a tennis player from the select option</string>
    <string name="ald_jugadoresMesBorrar">Are you sure you want to delete the player?</string>
    <string name="ald_jugadoresNeg">Register</string>
    <string name="ald_jugadoresNegNo">No</string>
    <string name="ald_jugadoresPos">Select</string>
    <string name="ald_jugadoresPosSi">Yes</string>
    <string name="txv_registrojug">tennis player registration</string>
    <string name="txv_modificajug">tennis player update</string>
    <string name="txv_listadojug">tennis player consultation</string>
    <string name="hint_tie_nombre">Tennis Player Name</string>
    <string name="txv_genero">gender</string>
    <string name="rdb_masculino">Male</string>
    <string name="rdb_femenino">Female</string>
    <string name="txv_brazo">Arm</string>
    <string name="rdb_derecho">Right</string>
    <string name="rdb_izquierdo">Left</string>
    <string name="txv_foto">Photo</string>
    <string name="btn_galeria">Gallery</string>
    <string name="btn_foto">Camera</string>
    <string name="ald_AlertJugadorMes">Check the data</string>
    <string name="toa_error_nombre">Name is missing</string>
    <string name="toa_error_genero">Genre is missing</string>
    <string name="toa_error_brazo">Arm is missing</string>
    <string name="toa_error_foto">Photo is missing</string>
    <string name="toa_error_getallnames">There are no registered tennis players</string>
    <string name="toa_error_exgetallnames">List could not be retrieved</string>
    <string name="toa_pasajugador_error">Tennis Player is missing</string>
    <string name="toa_obtenDatosVacioError">There is no data in the table</string>
    <!-- Golpes de tenis -->
    <string name="hit_titulo">Button Setting</string>
    <string name="hit_intruccion">Drag and Drop</string>
    <string name="hit_derecha">Drive</string>
    <string name="hit_reves">BackHand</string>
    <string name="hit_saque">Service</string>
    <string name="hit_volea">Volley</string>
    <string name="hit_Passhot">Pass.Shot</string>
    <!-- Juego Nuevo  -->
    <string name="tit_juegoNuevo">New Game</string>
    <string name="tit_juegoNuevoAbajo">Settings</string>
    <string name="btn_jugador1">Select Player 1</string>
    <string name="btn_jugador2">Select Player 2</string>
    <string name="txv_sets">How Many Sets</string>
    <string name="txv_tiebreak">Points last tiebreak</string>
    <string name="ald_JuegoMesFalta">At least 2 players are required\nto create a game</string>
    <string name="ald_Ok">Ok</string>

</resources>