<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.JugadoresFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_Fondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/imv_logo"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:src="@drawable/parejatenis" />

            <ImageButton
                android:id="@+id/imb_Atras"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:src="@drawable/abc_vector_test" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txv_RegistroJug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_registrojug"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/hint_tie_nombre"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txv_Genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_genero"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rdg_Genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_Masculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_masculino" />

            <RadioButton
                android:id="@+id/rdb_Femenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_femenino" />
        </RadioGroup>

        <TextView
            android:id="@+id/txv_Brazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_brazo"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rdg_Brazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_Derecho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_derecho" />

            <RadioButton
                android:id="@+id/rdb_Izquierdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_izquierdo" />
        </RadioGroup>
        <TextView
            android:id="@+id/txv_Foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_foto"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imv_Foto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:elevation="10dp"
                android:src="@drawable/acercade" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_galeria" />

                <Button
                    android:id="@+id/btn_Foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_foto" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/imb_grabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/continuar" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>