<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.RegistroJugadorFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_Fondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/imv_logo"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:src="@drawable/parejatenis" />

            <ImageButton
                android:id="@+id/imb_Atras"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:background="@color/transparente"
                android:src="@drawable/abc_vector_test" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txv_RegistroJug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_registrojug"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/hint_tie_nombre"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txv_ItemGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_genero"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rdg_Genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_Masculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_masculino" />

            <RadioButton
                android:id="@+id/rdb_Femenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_femenino" />
        </RadioGroup>

        <TextView
            android:id="@+id/txv_ItemBrazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_brazo"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rdg_Brazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_Derecho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_derecho" />

            <RadioButton
                android:id="@+id/rdb_Izquierdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_izquierdo" />
        </RadioGroup>
        <TextView
            android:id="@+id/txv_Foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/txv_foto"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imv_ItemFoto"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:elevation="10dp"
                android:src="@drawable/acercade" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_galeria" />

                <Button
                    android:id="@+id/btn_Foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_foto" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/imb_grabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:src="@mipmap/ic_confirmacion" />



        </LinearLayout>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam_MenuAcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        app:fab_addButtonColorNormal="?attr/colorAccent"
        app:fab_addButtonColorPressed="?attr/colorAccent"
        app:fab_addButtonSize="mini"
        app:fab_expandDirection="up"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_Agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            app:fab_icon="@mipmap/ic_launcher"
            app:fab_size="mini"
            app:fab_title="@string/hint_tie_nombre"></com.getbase.floatingactionbutton.FloatingActionButton>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_Confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            app:fab_icon="@mipmap/ic_confirmacion"
            app:fab_size="mini"></com.getbase.floatingactionbutton.FloatingActionButton>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_Borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            app:fab_icon="@mipmap/ic_confirmacion"
            app:fab_size="mini"></com.getbase.floatingactionbutton.FloatingActionButton>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>