<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.InicioFragment">

    <ImageView
        android:id="@+id/imv_Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cnd_logo"
        app:srcCompat="@drawable/settings5_117934" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grl_Casillero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_Logo"
        android:padding="4dp"
        app:columnCount="2"
        app:rowCount="4">


        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptJuePend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_optjuepend"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_juegopend"
                    android:src="@drawable/continuar"/>

                <TextView
                    android:id="@+id/txv_OptJuePend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optjuepend"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptJueNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_optjuenuevo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optjuenuevo"
                    android:src="@drawable/empezar"  />

                <TextView
                    android:id="@+id/txv_OptJueNuevo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optjuenuevo"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optjugadores"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optjugadores"
                    android:src="@drawable/parejatenis"  />

                <TextView
                    android:id="@+id/txv_OptJugadores"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optjugadores"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptAjustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optajustes"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optajustes"
                    android:src="@drawable/ajustes" />

                <TextView
                    android:id="@+id/txv_OptAjustes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optajustes"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptEstJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optestjuego"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optestjuego"
                    android:src="@drawable/juegoestad"  />

                <TextView
                    android:id="@+id/txv_OptEstJuego"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optestjuego"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptEstJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optestjugador"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optestjugador"
                    android:src="@drawable/jugaestad"  />

                <TextView
                    android:id="@+id/txv_OptEstJugador"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optestjugador"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptAyuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optayuda"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optayuda"
                    android:src="@drawable/ayuda"  />

                <TextView
                    android:id="@+id/txv_OptAyuda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optayuda"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_OptAcerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_optacerca"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cnd_optacerca"
                    android:src="@drawable/acercade" />

                <TextView
                    android:id="@+id/txv_OptAcerca"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/txv_optacerca"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</RelativeLayout>